// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders bitbucket suggestions correctly 1`] = `
<Alert
  className="big-spacer-bottom"
  variant="info"
>
  <p>
    onboarding.project_analysis.commands_for_analysis
  </p>
  <p>
    onboarding.project_analysis.suggestions.bitbucket
  </p>
  <FormattedMessage
    defaultMessage="onboarding.project_analysis.simply_link"
    id="onboarding.project_analysis.simply_link"
    values={
      Object {
        "link": <a
          href="/documentation/integrations/bitbucketcloud/#analyzing-with-pipelines"
          rel="noopener noreferrer"
          target="_blank"
        >
          onboarding.project_analysis.guide_to_integrate_piplines
        </a>,
      }
    }
  />
</Alert>
`;

exports[`renders github suggestions correctly 1`] = `
<Alert
  className="big-spacer-bottom"
  variant="info"
>
  <p>
    onboarding.project_analysis.commands_for_analysis
     
  </p>
  <p>
    onboarding.project_analysis.suggestions.github
  </p>
  <FormattedMessage
    defaultMessage="onboarding.project_analysis.simply_link"
    id="onboarding.project_analysis.simply_link"
    values={
      Object {
        "link": <a
          href="https://docs.travis-ci.com/user/sonarcloud/"
          rel="noopener noreferrer"
          target="_blank"
        >
          onboarding.project_analysis.guide_to_integrate_travis
        </a>,
      }
    }
  />
</Alert>
`;

exports[`renders vsts suggestions correctly 1`] = `
<Alert
  className="big-spacer-bottom"
  variant="info"
>
  <FormattedMessage
    defaultMessage="onboarding.project_analysis.simply_link"
    id="onboarding.project_analysis.simply_link"
    values={
      Object {
        "link": <a
          href="/documentation/integrations/vsts/"
          rel="noopener noreferrer"
          target="_blank"
        >
          onboarding.project_analysis.guide_to_integrate_vsts
        </a>,
      }
    }
  />
</Alert>
`;
